--- a/app/static/css/auth/login-register.css
+++ b/app/static/css/auth/login-register.css
@@ -4,10 +4,10 @@
 }
 
 .card {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.97);
 }
 
 #main-content {
-  background: url("../../assets/images/fondo.jpg") no-repeat center center;
-  background-size: auto 100%;
+  background: url("../../assets/images/fondo2.jpg") no-repeat center center;
+  background-size: 100% auto;
 }
