--- a/app/templates/programs/list.html
+++ b/app/templates/programs/list.html
@@ -28,7 +28,8 @@
               </p>
               <a 
                 href="{{ url_for('program.view_program', slug = p.slug) }}"
-                class="btn btn-primary mt-2">
+                class="btn btn-primary mt-2"
+                data-swup-animation="zoom-card">
                 Ver más
               </a>
             </div>
