--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 
   <!-- CSS extra -->
   <link href="{{ url_for('static', filename='css/session.css') }}?v=1.4" rel="stylesheet">
-  <link href="{{ url_for('static', filename='css/base.css') }}?v=1.15" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/base.css') }}?v=1.155" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/swup.css') }}?v=1.22" rel="stylesheet">
 
   <!-- Favicon -->
@@ -28,17 +28,13 @@
   <link rel="preload" as="image" href="{{ url_for('static', filename='assets/images/logo_sep.png') }}">
   <link rel="preload" as="image" href="{{ url_for('static', filename='assets/images/logo_posgrado.png') }}">
 
-  <!-- Preload css -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/program/list.css') }}?v=1.14">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/program/view.css') }}?v=1.15">
-  
 
   {% block styles %}{% endblock %}
 </head>
 
 <body class="d-flex flex-column min-vh-100">
   <!-- HEADER: 4 columnas iguales con los logos -->
-  <header id ="page-header" class="bg-white border-bottom py-3 shadow-sm">
+  <header id="page-header" class="bg-white border-bottom py-3 shadow-sm">
     <div class="container-fluid px-3">
       <div class="d-flex flex-wrap align-items-center justify-content-between gap-3">
 
@@ -76,10 +72,35 @@
   <div id="wrapper" class="container-fluid flex-grow-1 d-flex p-0">
     <!-- SIDEBAR -->
     {%block navbar%}
-    <aside id = "sidebar" class="bg-light border-end " style="width:240px;">
+    <aside id="sidebar" class="bg-light border-end " style="width:240px;">
+      <!-- FICHA DEL USUARIO -->
+      <div class="user-card d-flex align-items-center gap-2 mx-3 mb-3 p-2">
+        <img src="{{ current_user.avatar_url }}" alt="avatar" width="40" height="40"
+          class="rounded-circle flex-shrink-0">
+        <div class="flex-grow-1">
+          <span class="d-block fw-semibold small">
+            {{ current_user.first_name }} {{ current_user.last_name }}
+          </span>
+          {% if current_user.role.name == 'social_service' %}
+            <span class="badge bg-primary text-uppercase small ">
+              Servicio Social
+            </span>
+          {% elif current_user.role.name == 'program_admin' %}
+            <span class="badge bg-success text-uppercase small ">
+              Admin. Programa
+            </span>
+          {% elif current_user.role.name == 'posgraduate_admin' %}
+            <span class="badge bg-info text-uppercase small ">
+              Admin. Posgrado
+            </span>
+          {% endif %}
+        </div>
+      </div>
+      <hr class="my-0">
+
       <nav class="nav flex-column py-4">
         <a class="nav-link {% if request.endpoint=='user.profile' %}active{% endif %} ""
-         href="{{ url_for('user.profile') }}">
+         href=" {{ url_for('user.profile') }}">
           <i class="fas fa-user me-2"></i>Perfil
         </a>
         <a class="nav-link {% if request.endpoint=='user.dashboard' %}active{% endif %}"
@@ -109,7 +130,7 @@
     {%endblock%}
 
     <!-- MAIN CONTENT -->
-    <main class="flex-grow-1  p-4 swup-transition" id="main-content" >
+    <main class="flex-grow-1  p-4 swup-transition" id="main-content">
       {% block content %}{% endblock %}
     </main>
   </div>
